remplacement de l'image fictive par la mienne

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <div class="social-networks"></div>
             </div>
             <div class="image">
-                <img src="images/dls.png" alt="Alhassane Barry">
+                <img src="images/Sans titre - 1.png" alt="Alhassane Barry">
             </div>
         </section>
         <section class="aboute">
             <h2>A propos de moi</h2>
             <div class="abouteItem">
-                <img src="images/dls.png" alt="">
+                <img src="images/Sans titre - 1.png" alt="">
                 <div class="content">
                     <h3>A propos de moi</h3>
                     <p class="p">Bonjour, je suis Alhassane Barry, je suis etudiant de 2eme année en génie informatique à l'univers professionnel de dekar</p>
