--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
             <h2>Mes services</h2>
             <div class="main">
               <div class="service_item">
-                <div class="service_content" data-aos="fade-up" data-aos-duration="1500">
+                <div class="service_content" data-aos="fade-left" data-aos-duration="1500">
                   <h2>Developpement web</h2>
                   <p>
                     nous sommes spécialisés dans le développement web sur mesure pour répondre aux besoins uniques de chaque client. Notre équipe d'experts utilise les dernières technologies et meilleures pratiques pour créer des sites web attrayants, fonctionnels et optimisés pour les moteurs de recherche. Que vous souhaitiez une vitrine pour votre entreprise, une boutique en ligne ou une application web complexe, nous vous accompagnons à chaque étape du processus, de la conception à la mise en ligne. Notre objectif est de transformer vos idées en solutions digitales performantes qui vous aideront à atteindre vos objectifs commerciaux.
